<resources>
    <string name="app_name">Рецепты</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Категории блюд</string>
    <string name="nav_header_subtitle">Надины рецепты</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Настройки</string>
    <string name="action_dish_add">Добавить рецепт</string>
    <string name="action_dish_edit">Редактировать рецепт</string>
    <string name="action_dish_delete">Удалить рецепт</string>
    <string name="action_dish_save">Сохранить</string>
    <string name="action_dish_saveAs">Сохранить как …</string>
    <string name="action_dish_cancel">Отменить изменения</string>
    <string name="action_dish_favorite">Добавить в избранное</string>
    <string name="action_dish_infavorite">Удалить из избранного</string>

    <string name="default_name_dish">Название блюда</string>
    <string name="default_image_dish">Изображение блюда</string>

    <string name="default_name_category">Название категории</string>
    <string name="default_image_category">Изображение категории</string>


    <string name="choose_category">Выберите категорию блюд из меню слева</string>
    <string name="content_header_ingredients">Ингридиенты:</string>
    <string name="content_header_cooking">Способ приготовления:</string>
    <string name="edit_hint_name">Введите название блюда</string>

    <string name="edit_dish_name">Название блюда</string>
    <string name="edit_dish_type">Категория блюда</string>
    <string name="edit_dish_ingredients">Ингредиенты</string>
    <string name="edit_dish_cooking">Приготовление</string>
    <string name="edit_dish_image">Изображение</string>


    <string-array name="chooseSrcPhoto">
        <item>Выбрать изображение из галерии</item>
        <item>Сделать фото</item>
        <item>Удалить изображение</item>
    </string-array>
    



</resources>
