<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_dish_add"
        android:orderInCategory="50"
        android:title="@string/action_dish_add"
        app:showAsAction="never" />

    <group
        android:id="@+id/action_group_editing"
        android:visible="true"
        >
        <item
            android:id="@+id/action_dish_edit"
            android:orderInCategory="61"
            android:title="@string/action_dish_edit"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_dish_delete"
            android:orderInCategory="62"
            android:title="@string/action_dish_delete"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/action_group_saving"
        android:visible="false"
        >
        <item
            android:id="@+id/action_dish_save"
            android:orderInCategory="70"
            android:title="@string/action_dish_save"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_dish_saveAs"
            android:orderInCategory="71"
            android:title="@string/action_dish_saveAs"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_dish_cancel"
            android:orderInCategory="72"
            android:title="@string/action_dish_cancel"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>