<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DishEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/edit_dish_name"
            android:textSize="@dimen/content_dish_header_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/content_dish_header_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/edit_dish_type"
            android:textSize="@dimen/content_dish_header_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/content_dish_header_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/edit_dish_ingredients"
            android:textSize="@dimen/content_dish_header_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/content_dish_header_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/edit_dish_cooking"
            android:textSize="@dimen/content_dish_header_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/content_dish_header_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fab_cancel"
        app:srcCompat="@android:drawable/ic_input_add" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</android.support.constraint.ConstraintLayout>